--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
 作者 夏目2016 年 04月 09日">
 <meta property="og:type" content="website">
 <meta property="og:title" content="关于本站">
-<meta property="og:url" content="http://haymai.cc/about.html">
+<meta property="og:url" content="http://haymaicc.github.io/about.html">
 <meta property="og:site_name" content="唐伯虎点蜡烛">
 <meta property="og:description" content="本站网站放在GitHub上，工作之余做做总结，写写博客。
 
@@ -159,7 +159,7 @@
 
 
 
-  <link rel="canonical" href="http://haymai.cc/about.html"/>
+  <link rel="canonical" href="http://haymaicc.github.io/about.html"/>
 
 
 
