--- a/index.html
+++ b/index.html
@@ -2300,15 +2300,12 @@
 
 
 
-
-
   
   
 
 
 
-  
-  
+
 
 
 
@@ -2336,10 +2333,7 @@
   <script type="text/javascript" src="/lib/three/three.min.js"></script>
 
   
-  <script type="text/javascript" src="/lib/three/canvas_lines.min.js"></script>
-
-  
-  <script type="text/javascript" src="/lib/three/canvas_sphere.min.js"></script>
+  <script type="text/javascript" src="/lib/three/three-waves.min.js"></script>
 
 
   
