--- a/about.html
+++ b/about.html
@@ -545,15 +545,12 @@
 
 
 
-
-
   
   
 
 
 
-  
-  
+
 
 
 
@@ -581,10 +578,7 @@
   <script type="text/javascript" src="/lib/three/three.min.js"></script>
 
   
-  <script type="text/javascript" src="/lib/three/canvas_lines.min.js"></script>
-
-  
-  <script type="text/javascript" src="/lib/three/canvas_sphere.min.js"></script>
+  <script type="text/javascript" src="/lib/three/three-waves.min.js"></script>
 
 
   
